--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -89,3 +89,20 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@cdcdbb579706841c47f7063dda365e292e5cad7a # v1
+    - name: Cache
+
+  uses: actions/cache@v1.2.1
+
+  with:
+
+    # A directory to store and save the cache
+
+    path: 
+
+    # An explicit key for restoring and saving the cache
+
+    key: 
+
+    # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
+
+    restore-keys: # optional
